fix(analytics): populate subthemes in detail and fix Swagger examples
- Fix getDisciplinaMasteryDetail to correctly populate the children (subthemes) of theme DTOs.
- Update Swagger documentation examples to match the actual TopicMasteryDto structure (using difficultyStats instead of difficultyDistribution).
- Include comprehensive metrics (avgTimeSeconds, difficultyStats) across all levels of the hierarchical detail response.